AM_CXXFLAGS = -std=c++20
pkginclude_HEADERS =                \
	addrinfo_error.hpp          \
	client_stream_socket.hpp    \
	connected_stream_socket.hpp \
	dgram_socket.hpp            \
	errno_error.hpp             \
	inet_4_socket_addr.hpp      \
	inet_6_socket_addr.hpp      \
	inet_socket_addr.hpp        \
	liblocket.hpp               \
	server_stream_socket.hpp    \
	socket_addr.hpp             \
	socket_error.hpp            \
	socket.hpp                  \
	stream_socket.hpp           \
	unix_socket_addr.hpp
